# dolfin_pyvista_adapter

./: CITATION.cff  Dockerfile  README.md  _config.yml  _toc.yml  index.md  pyproject.toml
.github/workflows/: build_docs.yml  check_formatting.yml  docker-image.yml  test_package.yml
docker/: Dockerfile
docs/: api.rst  demo.ipynb
src/dolfin_pyvista_adapter/: __init__.py  source.py
tests/: test_3D.py  test_version.py
